[gd_scene load_steps=37 format=3 uid="uid://hji8le5si4gx"]

[ext_resource type="Script" uid="uid://dt8im3k7qjimv" path="res://scenes/player_character/player_character_2d.gd" id="1_2rm0r"]
[ext_resource type="Texture2D" uid="uid://shxuutqc8hci" path="res://assets/images/0x72_dungeon_tileset/0x72_DungeonTilesetII_v1.7.png" id="7_m06sm"]
[ext_resource type="Script" uid="uid://bknhvu85kax1u" path="res://scenes/player_character/shakey_camera_2d.gd" id="8_6dwpe"]
[ext_resource type="PackedScene" uid="uid://bkfn6xmy1qsm" path="res://scenes/player_character/PickupCollector/PickupCollector.tscn" id="10_c2xun"]
[ext_resource type="PackedScene" uid="uid://33tu2t66ifbo" path="res://scenes/StreamRepeater/StreamRepeater2D.tscn" id="11_y7scl"]
[ext_resource type="PackedScene" uid="uid://jh7wd7y46a4k" path="res://scenes/components/whip_component_2d.tscn" id="12_b8xpk"]
[ext_resource type="Script" uid="uid://trp5ykn3kx17" path="res://scenes/player_character/jump_component.gd" id="13_ay7hg"]
[ext_resource type="Script" uid="uid://cjxiqd1jrd2d8" path="res://scenes/components/knockback_component.gd" id="13_vw8up"]
[ext_resource type="PackedScene" uid="uid://bfm0qjo8jt58g" path="res://scenes/components/hurt_animation_component.tscn" id="14_hpsva"]
[ext_resource type="PackedScene" uid="uid://d4nlssgtrlsfn" path="res://scenes/components/hurtbox_2d.tscn" id="31_kq22h"]
[ext_resource type="PackedScene" uid="uid://plht4mnshaea" path="res://scenes/components/health_component.tscn" id="32_1qtai"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ox0bi"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fhrmu"]
atlas = ExtResource("7_m06sm")
region = Rect2(128, 41, 144, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_xmxm4"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p512y"]

[sub_resource type="Animation" id="Animation_o82cs"]
resource_name = "IDLE"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ay7hg"]
resource_name = "JUMP"
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2, 0.266667, 0.333333, 0.866667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 4, 5, 8, 5, 2]
}

[sub_resource type="Animation" id="Animation_a33v2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b8xpk"]
resource_name = "RUN"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3aj6m"]
_data = {
&"IDLE": SubResource("Animation_o82cs"),
&"JUMP": SubResource("Animation_ay7hg"),
&"RESET": SubResource("Animation_a33v2"),
&"RUN": SubResource("Animation_b8xpk")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o82cs"]
animation = &"IDLE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b8xpk"]
animation = &"JUMP"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ay7hg"]
animation = &"RUN"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hpsva"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vw8up"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m06sm"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fhrmu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h13k6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_23uyf"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8q4w1"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4cf5r"]
states/IDLE/node = SubResource("AnimationNodeAnimation_o82cs")
states/IDLE/position = Vector2(369.667, 100.675)
states/JUMP/node = SubResource("AnimationNodeAnimation_b8xpk")
states/JUMP/position = Vector2(547, 328.024)
states/RUN/node = SubResource("AnimationNodeAnimation_ay7hg")
states/RUN/position = Vector2(707.667, 99.9251)
states/Start/position = Vector2(200.667, 100.227)
transitions = ["Start", "IDLE", SubResource("AnimationNodeStateMachineTransition_hpsva"), "IDLE", "JUMP", SubResource("AnimationNodeStateMachineTransition_vw8up"), "JUMP", "IDLE", SubResource("AnimationNodeStateMachineTransition_m06sm"), "IDLE", "RUN", SubResource("AnimationNodeStateMachineTransition_fhrmu"), "RUN", "IDLE", SubResource("AnimationNodeStateMachineTransition_h13k6"), "JUMP", "RUN", SubResource("AnimationNodeStateMachineTransition_23uyf"), "RUN", "JUMP", SubResource("AnimationNodeStateMachineTransition_8q4w1")]
graph_offset = Vector2(-227, -53.9764)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tuxxo"]
random_pitch = 1.2
random_volume_offset_db = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mtwph"]
radius = 5.5

[sub_resource type="Animation" id="Animation_vw8up"]
resource_name = "HURT"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.486275), Color(1, 1, 1, 1), Color(1, 1, 1, 0.486275), Color(1, 1, 1, 1), Color(1, 1, 1, 0.486275), Color(1, 1, 1, 1), Color(1, 1, 1, 0.486275), Color(1, 1, 1, 1), Color(1, 1, 1, 0.486275), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m06sm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhrmu"]
_data = {
&"HURT": SubResource("Animation_vw8up"),
&"RESET": SubResource("Animation_m06sm")
}

[node name="PlayerCharacter" type="CharacterBody2D" node_paths=PackedStringArray("update_component_directions") groups=["player"]]
texture_filter = 1
collision_layer = 2
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_2rm0r")
update_component_directions = [NodePath("WhipComponent2D")]
ground_acceleration = 1000.0
max_ground_speed = 160.0
max_air_speed = 300.0
ground_friction = 1500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ox0bi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_fhrmu")
hframes = 9

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
position_smoothing_speed = 20.0
script = ExtResource("8_6dwpe")

[node name="PickupCollector" parent="." instance=ExtResource("10_c2xun")]
pull_area_force = 200.0
pull_max_speed = 400.0
pull_distance_exponent = 4.0
pull_area_shape = SubResource("CircleShape2D_xmxm4")
collect_area_shape = SubResource("CircleShape2D_p512y")

[node name="CharacterAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3aj6m")
}

[node name="CharacterAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_4cf5r")
anim_player = NodePath("../CharacterAnimationPlayer")

[node name="WalkingStreamRepeater2D" parent="." instance=ExtResource("11_y7scl")]
stream = SubResource("AudioStreamRandomizer_tuxxo")
volume_db = -4.0
repeat_delay = 0.3
metadata/_edit_lock_ = true

[node name="Hurtbox2D" parent="." node_paths=PackedStringArray("_components") instance=ExtResource("31_kq22h")]
_components = [NodePath("../HealthComponent"), NodePath("../KnockbackComponent")]
_max_damage = 2.0

[node name="CollisionShape2D" parent="Hurtbox2D" index="0"]
shape = SubResource("CircleShape2D_mtwph")

[node name="HealthComponent" parent="." instance=ExtResource("32_1qtai")]
starting_health = 10.0
max_health = 10.0

[node name="WhipComponent2D" parent="." node_paths=PackedStringArray("character_body") instance=ExtResource("12_b8xpk")]
character_body = NodePath("..")
attachable_groups = Array[StringName]([&"walls"])
action_name = &"whip"

[node name="KnockbackComponent" type="Node" parent="." node_paths=PackedStringArray("character_2D")]
script = ExtResource("13_vw8up")
character_2D = NodePath("..")

[node name="JumpComponent" type="Node" parent="." node_paths=PackedStringArray("player_character", "animation_tree")]
script = ExtResource("13_ay7hg")
player_character = NodePath("..")
action_name = &"jump"
animation_tree = NodePath("../CharacterAnimationTree")
metadata/_custom_type_script = "uid://c1d7hck53ucp5"

[node name="HurtAnimationComponent" parent="." node_paths=PackedStringArray("_health_component") instance=ExtResource("14_hpsva")]
libraries = {
&"": SubResource("AnimationLibrary_fhrmu")
}
_health_component = NodePath("../HealthComponent")

[connection signal="pickup_collected" from="PickupCollector" to="." method="_on_pickup_collector_pickup_collected"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]

[editable path="Hurtbox2D"]
